<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:keepScreenOn="true"
    android:orientation="vertical">


    <TextView
        android:id="@+id/iv_search_voxx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/tv_voxx"
        android:textColor="@drawable/black"
        android:textSize="22sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/iv_search_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="3dp"
        android:text="@string/tv_voxx_info"
        android:textColor="@drawable/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/iv_search_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/black_little"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:text="@string/tv_voxx_device"
        android:textColor="@drawable/black"
        android:textSize="18sp" />


    <ListView
        android:id="@+id/remote_device_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:padding="5dp"
        android:scrollbars="none"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp" />


    <TextView
        android:id="@+id/tv_search_version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:padding="8dp"
        android:layout_gravity="end"
        android:textColor="@drawable/black"
        android:textSize="15sp" />


</LinearLayout>